--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
   </div>
   
   <div id="side-bar">
-    <span>Options:</span>
-    <br><br>
+    <h4>Options</h4>
     <span>Hide:</span>
     <div class="option">
         <span>Name</span>
@@ -65,6 +64,16 @@
     <div class="option">
         <span>Evolutions</span>
         <input type="checkbox" id="evolutions" checked>
+    </div>
+    <h4>filters</h4>
+    <div id="filters">
+        <div id="filter-warning"><span>No cards match current filter!</span></div>
+        <span>Category: </span><select id="filter-category"></select><br>
+        <span>Typing: </span><select id="filter-typing"></select><br>
+        <span>Type 1: </span><select id="filter-type1"></select><br>
+        <span>Type 2: </span><select id="filter-type2"></select><br>
+        <span>Gen: </span><select id="filter-gen"></select><br>
+        <span>Evo: </span><select id="filter-evo"></select><br>
     </div>
   </div>
   
@@ -128,31 +137,11 @@
         <button id="reveal-button">Reveal All</button>
         <button id="fail-button">Fail</button>
         <button id="success-button">Success</button>
-
     </div>
     </div>
     <script src="scripts/card.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/data.js"></script>
-    <script>
-        main();
-
-        
-        getElem("success-button").onclick = function() {
-            createPartiallyHiddenCard(selectCard());
-        }
-
-        getElem("fail-button").onclick = function() {
-            createPartiallyHiddenCard(selectCard());
-        }
-
-        getElem("back-button").onclick = function() {
-            if(cardHistory.length === 0) {
-                return;
-            }
-            c = cardHistory.pop();
-            createPartiallyHiddenCard(c);
-        }
-    </script>
+    <script src="scripts/quiz.js"></script>
 </body>
 </html>
