Evo method filter

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         <span>Type 2: </span><select id="filter-type2"></select><br>
         <span>Gen: </span><select id="filter-gen"></select><br>
         <span>Evo: </span><select id="filter-evo"></select><br>
+        <span>Evo Method: </span><select id="filter-evo-method"></select><br>
     </div>
   </div>
   
